[package]
name = "dye-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "dye"
path = "src/main.rs"

[dependencies]
clap = { version = "3.0.0-beta.4", features = ["color", "env", "suggestions"]}
colored = "2.0.0"