[package]
name = "dye-cli"
version = "0.1.1"
edition = "2021"
authors = ["Kurt Wolf <kurtwolfbuilds@gmail.com>"]
description = "A tool to color shell text."
license = "MIT"
repository = "https://github.com/kurtbuilds/dye"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "dye"
path = "src/main.rs"

[dependencies]
clap = { version = "3.0.0-beta.4", features = ["color", "env", "suggestions"]}
colored = "2.0.0"
